# ZPAD

./: .gitignore  lab3.ipynb
data/: vhi_id_10_20260420_013946.csv  vhi_id_11_20260420_013947.csv  vhi_id_12_20260420_013948.csv  vhi_id_13_20260420_013949.csv  vhi_id_14_20260420_013949.csv  vhi_id_15_20260420_013950.csv  vhi_id_16_20260420_013951.csv  vhi_id_17_20260420_013952.csv  vhi_id_18_20260420_013953.csv  vhi_id_19_20260420_013954.csv  vhi_id_1_20260420_013933.csv  vhi_id_20_20260420_013955.csv  vhi_id_21_20260420_013956.csv  vhi_id_22_20260420_013957.csv  vhi_id_23_20260420_013958.csv  vhi_id_24_20260420_013958.csv  vhi_id_25_20260420_013959.csv  vhi_id_26_20260420_014000.csv  vhi_id_27_20260420_014001.csv  vhi_id_2_20260420_013939.csv  vhi_id_3_20260420_013939.csv  vhi_id_4_20260420_013941.csv  vhi_id_5_20260420_013942.csv  vhi_id_6_20260420_013943.csv  vhi_id_7_20260420_013943.csv  vhi_id_8_20260420_013944.csv  vhi_id_9_20260420_013945.csv
lab2/: .gitignore  lab2_part1.ipynb  readme.md
lab3/: lab3.ipynb  readme.md  requirements.txt
lab4/: lab4.ipynb  readme.md
lab5/: .gitignore  app.py  lab2_part1.ipynb  lab3.ipynb  readme.md
lab5/data/: vhi_id_10_20260420_013946.csv  vhi_id_11_20260420_013947.csv  vhi_id_12_20260420_013948.csv  vhi_id_13_20260420_013949.csv  vhi_id_14_20260420_013949.csv  (+22 more)
lab6/: .gitignore  CMakeLists.txt  preinstall.sh  readme.md  run.sh
lab6/include/: FrameProcessor.hpp  KeyProcessor.hpp
lab6/src/: Display.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
lab7/: .gitignore  preinstall.sh  readme.md
(+8 files in other folders)
